--- a/html.html
+++ b/html.html
@@ -9,7 +9,7 @@
     </style>
     <title>Atri App</title>
     </script>
-    <link href="/punithareddy29/main/my_app/css.css" rel="stylesheet">
+    <link href="https://github.com/punithareddy29/my_app/blob/main/css.css">
 </head>
 <body>
     <div id="root" style="height:100vh">
